--- a/TagsTwitter.ipynb
+++ b/TagsTwitter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "e6cedd35-7fa1-4bbe-bca1-715f348a8e64",
    "metadata": {},
    "outputs": [],
@@ -16,57 +16,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "dc6ba850-7daa-4e0c-a043-d58ca9bb736a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumer_key = ''\n",
-    "consumer_secret = ''\n",
-    "access_token = ''\n",
-    "access_secret = ''"
+    "BEARER_TOKEN = 'AAAAAAAAAAAAAAAAAAAAACRnzAEAAAAA71nhJ%2BOpTQZ2I63bL2ZJNC1sbao%3DNl29N95dl5kDKAfBZZM4P4g5KbzF1hYNcbC2fXPMUnuLa1X6Qg'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "cbbee577-117e-4520-bc75-163445ebb04f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class TweetListener(StreamRule):\n",
-    "\n",
-    "    def __init__(self, csocket):\n",
+    "class TweetListener(tweepy.StreamingClient):\n",
+    "    def __init__(self, bearer_token, csocket):\n",
+    "        super().__init__(bearer_token)\n",
     "        self.client_socket = csocket\n",
     "\n",
-    "    def on_data(self, data):\n",
+    "    def on_data(self, raw_data):\n",
     "        try:\n",
-    "            msg = json.load(data)\n",
-    "            print(msg['text'].encode('utf-8'))\n",
-    "            self.client_socket.send(msg['text'].encode('utf-8'))\n",
-    "            return True\n",
-    "        except BaseException as e:\n",
-    "            print(\"Error: \", e)\n",
+    "            msg = json.loads(raw_data)\n",
+    "            if \"data\" in msg:\n",
+    "                tweet_text = msg[\"data\"][\"text\"]\n",
+    "                print(tweet_text) \n",
+    "                self.client_socket.send(tweet_text.encode(\"utf-8\"))\n",
+    "        except Exception as e:\n",
+    "            print(f\"Erro ao processar tweet: {e}\")\n",
     "        return True\n",
     "\n",
     "    def on_error(self, status):\n",
-    "        print(status)\n",
+    "        print(f\"Erro na API do Twitter: {status}\")\n",
     "        return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "737725ec-4e42-4ffd-bb30-d2d5dfcd8cf6",
    "metadata": {},
    "outputs": [],
    "source": [
     "def sendData(c_socket):\n",
-    "    auth = OAuthHandler(consumer_key, consumer_secret)\n",
-    "    auth.access_token(access_token, access_secret)\n",
+    "    stream = TweetListener(BEARER_TOKEN, c_socket)\n",
+    "    \n",
+    "    stream.add_rules(tweepy.StreamRule(value=\"soccer\"))\n",
     "\n",
-    "    twitter_stream = StreamRule(auth, TweetListener(c_socket))\n",
-    "    twitter_stream.filter(track=['soccer'])"
+    "    stream.filter()"
    ]
   },
   {
@@ -79,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Listening on port 5555\n"
+      "Listening on port 9998\n"
      ]
     }
    ],
@@ -87,10 +85,10 @@
     "if __name__ == '__main__':\n",
     "    s = socket.socket()\n",
     "    host = '127.0.0.1'\n",
-    "    port = 5555\n",
+    "    port = 9998\n",
     "    s.bind((host, port))\n",
     "\n",
-    "    print('Listening on port 5555')\n",
+    "    print('Listening on port 9998')\n",
     "\n",
     "    s.listen(5)\n",
     "    c, addr = s.accept()\n",
@@ -99,8 +97,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "eb7027b9-aba2-40b0-958c-01eab42d75a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "429\n",
+      "{'title': 'Too Many Requests', 'detail': 'Too Many Requests', 'type': 'about:blank', 'status': 429}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://api.twitter.com/2/tweets/search/recent?query=soccer\"\n",
+    "\n",
+    "headers = {\"Authorization\": f\"Bearer {BEARER_TOKEN}\"}\n",
+    "response = requests.get(url, headers=headers)\n",
+    "\n",
+    "print(response.status_code)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d31f0c52-69ac-4dec-b460-1cd64a750057",
+   "id": "3746931c-927e-45b8-8c00-4ea91c1afb28",
    "metadata": {},
    "outputs": [],
    "source": []
